@@ -2,6 +2,7 @@
 
  - Fix for bug 31611: Properly re-add capability and added option to clean capabilities from storage
  - Fix for bug 31633: Properly acquire next identifier using a transaction
+ - Fix for bug 29979: Added appropriate row locks to support concurrent user create operations
 
 * 2014-03-17 - thorben.betten@open-xchange.com
 
